<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="210dp"
        android:layout_height="160dp"
        android:layout_marginTop="40dp"
        app:cardBackgroundColor="@color/card_background"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageViewHombre"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:textAlignment="center"
                app:srcCompat="@drawable/genero_masculino"
                app:tint="@color/white" />

            <TextView
                android:id="@+id/textViewHombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hombre"
                android:textAlignment="center"
                android:textColor="@color/card_text"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewMujer"
        android:layout_width="210dp"
        android:layout_height="160dp"
        android:layout_marginTop="40dp"
        app:cardBackgroundColor="@color/card_background"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/cardView2"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageViewMujer"
                android:layout_width="90dp"
                android:layout_height="90dp"
                app:srcCompat="@drawable/female_symbol"
                app:tint="@color/white" />

            <TextView
                android:id="@+id/textViewMujer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mujer"
                android:textAlignment="center"
                android:textColor="@color/card_text"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginTop="30dp"
        app:cardBackgroundColor="@color/card_background"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewAltura"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@string/altura"
                android:textAlignment="center"
                android:textColor="@color/card_text"
                android:textSize="15dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewCm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/numAltura"
                android:textAlignment="center"
                android:textColor="@color/variable"
                android:textSize="40dp"
                android:textStyle="bold" />

            <com.google.android.material.slider.RangeSlider
                android:id="@+id/rangeSlider"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:valueFrom="120"
                android:valueTo="220"
                app:haloColor="@color/slider_halo"
                app:thumbColor="@color/slider_halo" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView4"
        android:layout_width="210dp"
        android:layout_height="160dp"
        android:layout_marginTop="30dp"
        app:cardBackgroundColor="@color/card_background"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewPeso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/peso"
                android:textAlignment="center"
                android:textColor="@color/card_text"
                android:textSize="15dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewNumPeso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/numPeso"
                android:textAlignment="center"
                android:textColor="@color/variable"
                android:textSize="34sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/floatingActionButton5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    app:backgroundTint="@color/boton_background"
                    app:srcCompat="@drawable/minus"
                    app:tint="@color/contenido_boton" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/floatingActionButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    app:backgroundTint="@color/boton_background"
                    app:srcCompat="@drawable/plus"
                    app:tint="@color/contenido_boton" />

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="210dp"
        android:layout_height="160dp"
        android:layout_marginTop="30dp"
        app:cardBackgroundColor="@color/card_background"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/cardView4"
        app:layout_constraintTop_toBottomOf="@+id/cardView3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewEdad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/edad"
                android:textAlignment="center"
                android:textColor="@color/card_text"
                android:textSize="15dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/numEdad"
                android:textAlignment="center"
                android:textColor="@color/variable"
                android:textSize="34sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/floatingActionButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    app:backgroundTint="@color/boton_background"
                    app:srcCompat="@drawable/minus"
                    app:tint="@color/contenido_boton" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/floatingActionButton3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    app:backgroundTint="@color/boton_background"
                    app:srcCompat="@drawable/plus"
                    app:tint="@color/contenido_boton" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginBottom="25dp"
        android:backgroundTint="@color/boton_background"
        android:text="@string/botonCalcular"
        android:textColor="@color/contenido_boton"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>